# AStar-Planner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  map.bt  package.xml
.github/workflows/: cmake-single-platform.yml
Doc/Camera/: README.md
Doc/P450/: README.md
Log/: log_6_2024-2-20-14-41-14.ulg  log_8_2024-2-20-15-42-26.ulg
Log/2024-02-20/: log_7_2024-2-20-15-36-38.ulg
Log/2024-03-17/: frames.dot
Log/2024-03-21/: frames.dot
Modify/: A_star.cpp.docx  astar_onboard.launch.docx  global_planner.cpp.docx  px4_sender.yaml.docx  rviz_config_astar.docx  swarm_planner.cpp.docx
Simulate/APF_3D_point_matlab/: main.mlx
code/APF_2D_cpp/: APF.cpp
code/APF_3D_cpp/: APF.cpp  APF_3D.cpp
code/APF_3D_cube_matlab/: APF3D.m  drawCube.m  main.mlx
code/APF_3D_matlab/: APF3D.m  main.mlx
code/Astar/: Astar.cpp  Astar.h  main.cpp
code/Astar/cpp/: Astar.h
code/人工势场法/: main.mlx
code/人工势场法_3D/: APF3D.asv  main.mlx
config/: AStar-Planner.rviz  px4_config.yaml  px4_sender.yaml  rviz.rviz  rviz_config.rviz
docs/Camera/: README.md
docs/D435i/: README.md
docs/P450/sensor_inspect/: Lidar.sh  cam0.sh
docs/T265/: README.md
include/: A_star.h  Astar.h  global_planner.h  occupy_map.h  tools.h
launch/: AStar-Planner.launch  amov-50C-3.launch  mavros.launch  mavros_vicon_bridge.launch  navigation.launch  octomapping.launch  prometheus_control.launch  prometheus_station.launch  rs_t265.launch  simulation.launch  tf_transform.launch  uav_experienment.launch  uav_navigation.launch  uav_octomapping.launch  vicon.launch
reference/: My EndNote Library.enl
reference/My EndNote Library.Data/PDF/2036952937/: 双目立体视觉技术的实现及其进展.bib
reference/My EndNote Library.Data/sdb/: pdb.eni  sdb.eni
reference/导入文件/: CNKI-20231010115810140.txt  Dynamic obstacle avoidance for quadrotors with event cameras.bib  Rank Minimization for Snapshot Compressive Imaging.enw  Research on an Obstacle Avoidance Method for UAV.ris  一种基于A*算法的虚拟力场避障导航算法.bib  一种基于Astar算法的虚拟力场避障导航算法.bib  基于双目立体视觉技术的运动物体空间位置信息测量方法研究.bib  基于改进人工势场的物流无人机三维航迹规划.bib  基于改进型人工势场法的车辆避障路径规划研究.bib  基于视频图像的无人机避障技术研究.bib  用于多旋翼无人机的目标检测、导航与避障系统.bib
report/任务书/: 南方科技大学本科生毕业设计（论文）任务书.docx
report/开题报告/: 南方科技大学本科生毕业设计（论文）开题报告.docx
report/选题申报表/: 南方科技大学本科生毕业设计（论文）选题申报表.docx
scripts/APF_3D_cube_matlab/: main.mlx
source/: readT265.cpp
source code/APF_cpp/: ArtificialPotential.h
source code/APF_matlab/: main_副本.m
source code/Astar_matlab/新的A星路径规划matlab文件合集/: A_ROAD_book03.m
source code/sensor_inspect/: D435i.sh  T265.sh
source/APF_matlab/: compute_Attract.m  compute_angle.m
source/Astar_cpp/: main.cpp
source/Modules/control/: CMakeLists.txt
source/Modules/control/src/Utilities/: rc_control.cpp
source/Modules/global_planning/: README.md
source/Modules/global_planning/src/: A_star.cpp
source/Modules/mission/autonomous_landing/: autonomous_landing.cpp
source/Modules/object_detection/cpp_nodes/: web_cam.cpp
source/Modules/object_detection/dataset/ellipse/: landing_patches.txt
source/Modules/object_detection/launch/: mipi_cam_veye327.launch
source/Modules/object_detection/py_nodes/digitnum_det/: pytorch_mnist.py  switch_msg_test.py
source/Modules/object_detection/py_nodes/stats/: depth_est_stat.py
source/Modules/object_detection/src/ellipse_lib/: spire_ellipsedetector.cpp  spire_ellipsedetector.h
source/Modules/planning/RL_swarm_planning/: README.md
src/: A_star.cpp  Astar.cpp  global_planner.cpp  global_planner_node.cpp  occupy_map.cpp  tools.cpp
中期检查/: 南方科技大学本科生毕业设计（论文）中期检查报告-模板.docx.docx  南方科技大学本科生毕业设计（论文）中期自查表.docx
参考文献/: My EndNote Library.enl
参考文献/My EndNote Library.Data/sdb/: pdb.eni  sdb.eni
参考文献/导入文件/: 2023-10-10 21@cqvip.txt  CNKI-20231010115737125.txt  CNKI-20231010120016010.txt  CNKI-20231011131329555.txt  CNKI-20231017080803042.bib  CNKI-20231017081419405.bib  CNKI-20231017081954221.bib  CNKI-20231017143320259.bib  CNKI-20231017143351001.bib  Chance-Constrained Collision Avoidance for MAVs in Dynamic Environments.bib  动态环境下无人机主动避障技术研究.bib  城市环境下基于深度强化学习的无人机多维路径规划.bib  基于人工势场法的无人机局部航迹重规划.bib  基于双目视觉的室内避障无人机设计与实现.bib  基于改进RRT算法的无人机航迹规划方法研究.bib  基于改进VFH算法的无人机避障研究.bib  基于改进人工势场模型的无人机局部避障方法分析.bib  基于改进人工势场法的四旋翼无人机航迹规划算法.txt  无人机避障方法研究综述.bib
报告论文/任务书/: 任务书-华.docx  南方科技大学本科生毕业设计（论文）任务书-华羽霄-陈亮名.docx
报告论文/开题报告/: 南方科技大学本科生毕业设计（论文）开题报告(1).docx  南方科技大学本科生毕业设计（论文）开题报告.docx  开题报告-华羽霄.pptx  未命名.pptx
报告论文/论文/: 南方科技大学本科生毕业设计（论文）中文样例.docx  南方科技大学本科生毕业设计（论文）英文封面-2017年更新版.docx
毕业设计/开题报告/: 开题报告-华羽霄.pptx
毕业设计/论文/: 南方科技大学本科生毕业设计（论文）中文封面-2017年更新版.docx  南方科技大学本科生毕业设计（论文）撰写规范.docx  南方科技大学本科生毕业设计（论文）英文样例.doc
源代码/: A_Star_4_Path.m  Astar算法.m  test_DeSCI.m
源代码/APF_cpp/: APF.cpp  ArtificialPotential.cpp
源代码/APF_matlab/: APF2D.m  compute_repulsion.m
源代码/Astar_matlab/新的A星路径规划matlab文件合集/: A_ROAD_book02.m
源代码/人工势场法/: main.m
源代码/新的A星路径规划matlab文件合集/: A_ROAD_book05.m
