<?xml version="1.0"?>
<package format="2">
    <name>uav_navigation</name>
    <version>3.0.0</version>
    <description>A ROS package for dynamic navigation in 3D octomap with 2D lidar on Premetheus P450 (Nano)</description>
    <author email="fatmoonqyp@126.com">Yuhua Qi</author>
    <author email="hyx020222@gmail.com">Eason Hua</author>
    <maintainer email="hyx020222@gmail.com">Eason Hua</maintainer>
    <license>MIT</license>
    <url type="website">https://github.com/HuaYuXiao/uav_navigation</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>prometheus_msgs</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>octomap</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>prometheus_msgs</build_export_depend>
    <build_export_depend>pcl_ros</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>octomap</exec_depend>
    <exec_depend>prometheus_msgs</exec_depend>
    <exec_depend>pcl_ros</exec_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
        <build_type>catkin</build_type>
    </export>
</package>
