<?xml version="1.0"?>
<package format="2">
    <name>astar_planner</name>
    <version>4.1.7</version>
    <description>
        A ROS package for drone planning and navigation
    </description>
    <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
    <author email="fatmoonqyp@126.com">Yuhua Qi</author>

    <license>Apache</license>

    <url type="repository">https://github.com/HuaYuXiao/AStar-Planner.git</url>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>easondrone_msgs</depend>
    <depend>pcl_ros</depend>

    <build_depend>octomap</build_depend>

    <export>
        <!-- Other tools can request additional information be placed here -->
        <build_type>catkin</build_type>
    </export>
</package>
